# explore_gsplat

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
examples/: simple_trainer.py
examples/results/garden/: cfg.yml
examples/results/garden/tb/: events.out.tfevents.1774606067.zeus2.72778.0  events.out.tfevents.1774606118.zeus2.73134.0  events.out.tfevents.1774606174.zeus2.74081.0  events.out.tfevents.1774606370.zeus2.74999.0  events.out.tfevents.1774606470.zeus2.75571.0  events.out.tfevents.1774606668.zeus2.76874.0  events.out.tfevents.1774606764.zeus2.77999.0  events.out.tfevents.1774607208.zeus2.81049.0  events.out.tfevents.1774607281.zeus2.81682.0
src/explore_gsplat/: dataset.py  process.py
