[project]
name = "explore-gsplat"
version = "0.1.0"
description = "Exploring Gaussian splatting!"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gsplat==1.5.3",
    # match gsplat pre-built wheel version
    "torch>=2.4,<2.5",
    # gsplat's runtime deps (required when installing from pre-built wheels)
    "ninja",
    "numpy",
    "jaxtyping",
    "rich",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
 
[[tool.uv.index]]
name = "gsplat-whl"
url = "https://docs.gsplat.studio/whl/pt24cu124"
explicit = true
 
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
gsplat = { index = "gsplat-whl" }
