[project]
name = "explore-gsplat"
version = "0.1.0"
description = "Exploring Gaussian splatting!"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gsplat==1.5.3",
    # match gsplat pre-built wheel version
    "torch>=2.4,<2.5",
    # gsplat's runtime deps (required when installing from pre-built wheels)
    "ninja",
    "numpy",
    "jaxtyping",
    "rich",
    "tqdm>=4.67.3",
    "tyro>=1.0.11",
    "viser>=1.0.24",
    "pyyaml>=6.0.3",
    "torchmetrics[image]>=1.9.0",
    "fused-ssim",
    "nerfview>=0.1.3",
    "tensorboard>=2.20.0",
    "opencv-contrib-python-headless>=4.13.0.92",
    "pycolmap",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.8",
    "splines>=0.3.3",
    "setuptools==81.0",
    "imageio[ffmpeg]>=2.37.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
 
[[tool.uv.index]]
name = "gsplat-whl"
url = "https://docs.gsplat.studio/whl/pt24cu124"
explicit = true
 
[tool.uv.sources]
torch = { index = "pytorch-cu124" }
gsplat = { index = "gsplat-whl" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim" }
# pycolmap was using numpyv1 and suffered from BR.
pycolmap = { git = "https://github.com/brandonyzhao/pycolmap", branch = "fix-invalidpt3d" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
]
